gitops/host/infrastructure/gateways/gw-apps.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: istio
  listeners:
  - name: apps
    hostname: "*.apps.ne.azure.kubespaces.cloud"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: apps-wildcard-tls
    allowedRoutes:
      namespaces:
        from: All
